style.css
:root {
  --background-color: rgb(248, 248, 248);
  --hero-border-color: rgb(43, 43, 43);
  box-sizing: border-box;
  font-family: "Ubuntu", sans-serif;
}

*,
::before,
::after {
  box-sizing: inherit;
  padding: 0;
  margin: 0;
}

body {
  background-color: var(--background-color);
}

.hero {
  text-align: center;
  height: 100vh;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero h1 {
  font-size: 6em;
  margin: 0.4em;
}

.hero h2 {
  font-size: 1.8em;
  text-transform: uppercase;
}

.background {
  background-image: url(./assets/images/hero-background.jpg);
  z-index: 0;
  width: 100%;
  height: 100%;
  min-height: 100%;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  position: absolute;
  z-index: -1;
  overflow: hidden;
}

.intro {
  display: flex;
  justify-content: center;
  align-items: stretch;
  flex-grow: 1;
  margin: 4em;
  padding: 4em;
  border: 4px solid var(--hero-border-color);
  border-radius: 26px;
  min-height: 600px;
  height: calc(100vh - 8em);
}

.scroll-down-wrapper {
  position: absolute;
  bottom: 50px;
  left: 0;
  right: 0;
  margin: 0 auto;
  text-align: center;
  color: #f2f2f2;
}

.initial-outro img {
  width: 35px;
  transition: opacity 0.5s ease, visibility 0.5s;
}

.hero-name {
  flex-shrink: 0;
  flex-basis: 60%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 6em;
}

.hero-name * {
  line-height: 40px;
}

.hero-image {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 6em;
  flex-shrink: 0;
  flex-basis: 40%;
}

.hero-image img {
  max-width: 100%;
  max-height: 100%;
}

/* What I do */
.what-i-do {
  /* outline: 1px solid gray; */
  min-height: 600px;
  height: calc(100vh);
  background-color: hsl(00, 40%, 97%);
  display: flex;
  flex-direction: column;
  align-items: center;
  /* justify-content: center; */
}

.section-heading {
  font-size: 3em;
  margin: 1em 1em 0 1em;
  padding: 1em;
}

.what-i-do-cards {
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  align-items: flex-start;
  width: 100%;
}
.i-do-card {
  min-width: 400px;
  width: 500px;
  min-height: 550px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding: 4em;
  text-align: center;
}
.i-do-card h2 {
  margin: 1em;
}
.i-do-icon img {
  width: 175px;
  height: 200px;
}

.hide {
  display: none;
}

/*
Congratulation
First Media QUery
*/
@media (max-width: 576px) {
  .hero h1 {
    font-size: 4em;
    margin: 0.2em;
  }
  .hero h2 {
    font-size: 1.5em;
  }
  .hero {
    padding: 0.2em;
  }
}
@media (min-width: 1024px) {
  .hero h1 {
    font-size: 8em;
  }
  .hero h2 {
    font-size: 2.5em;
  }
}

